[gd_scene load_steps=10 format=2]

[ext_resource path="res://scripts/Mob.gd" type="Script" id=1]

[sub_resource type="BoxShape" id=9]
extents = Vector3( 4, 4, 4 )

[sub_resource type="CapsuleMesh" id=1]
mid_height = 0.001
radial_segments = 24
rings = 6

[sub_resource type="SpatialMaterial" id=3]
albedo_color = Color( 0.835294, 0.109804, 0.109804, 1 )

[sub_resource type="CapsuleMesh" id=4]
radius = 0.212
mid_height = 0.001
radial_segments = 24
rings = 6

[sub_resource type="SpatialMaterial" id=5]
albedo_color = Color( 0.278431, 0.0509804, 0.0509804, 1 )

[sub_resource type="CapsuleMesh" id=7]
radius = 0.073
mid_height = 0.001
radial_segments = 24
rings = 6

[sub_resource type="SpatialMaterial" id=8]

[sub_resource type="CubeMesh" id=6]
size = Vector3( 0.61, 0.2, 0.1 )

[node name="Mob" type="KinematicBody" groups=["enemy"]]
transform = Transform( 1.4, 0, 0, 0, 1.4, 0, 0, 0, 1.4, 0, 1.14292, 0 )
script = ExtResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.744018, 0 )
shape = SubResource( 9 )

[node name="ray_front" type="RayCast" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.941531, 0 )
enabled = true
cast_to = Vector3( 0, 0, 10 )
debug_shape_thickness = 5.0

[node name="ray_left" type="RayCast" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.941531, -0.0303755 )
enabled = true
cast_to = Vector3( 10, 0, 0 )
debug_shape_thickness = 5.0

[node name="ray_right" type="RayCast" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.941531, -0.0303755 )
enabled = true
cast_to = Vector3( -10, 0, 0 )
debug_shape_thickness = 5.0

[node name="MeshInstance" type="MeshInstance" parent="."]
transform = Transform( 2, 0, 0, 0, 2, 0, 0, 0, 2, 0, 0.836527, 0 )
mesh = SubResource( 1 )
material/0 = SubResource( 3 )

[node name="MeshInstance2" type="MeshInstance" parent="."]
transform = Transform( 2, 0, 0, 0, 2, 0, 0, 0, 2, -0.733444, 0.836527, 1.76597 )
mesh = SubResource( 4 )
material/0 = SubResource( 5 )

[node name="MeshInstance3" type="MeshInstance" parent="."]
transform = Transform( 2, 0, 0, 0, 2, 0, 0, 0, 2, 0.675546, 0.836527, 1.76597 )
mesh = SubResource( 4 )
material/0 = SubResource( 5 )

[node name="MeshInstance5" type="MeshInstance" parent="."]
transform = Transform( 2, 0, 0, 0, 2, 0, 0, 0, 2, 0.828109, 0.709159, 2.01926 )
mesh = SubResource( 7 )
material/0 = SubResource( 8 )

[node name="MeshInstance6" type="MeshInstance" parent="."]
transform = Transform( 2, 0, 0, 0, 2, 0, 0, 0, 2, -0.888381, 0.961174, 2.02342 )
mesh = SubResource( 7 )
material/0 = SubResource( 8 )

[node name="MeshInstance4" type="MeshInstance" parent="."]
transform = Transform( 2, 0, 0, 0, 1.83426, -0.797178, 0, 0.797178, 1.83426, 0.0157038, -0.0250206, 1.81463 )
mesh = SubResource( 6 )
material/0 = SubResource( 5 )

[node name="Camera" type="Camera" parent="."]
transform = Transform( -0.714286, 0, -6.24448e-08, 0, 0.714286, 0, 6.24448e-08, 0, -0.714286, 0, 3.49907, -0.966795 )
